# urt-visualisation

./: 404.html  LICENSE  README.md  colour.html  index.html  main.py  mkdocs.yml  objects.inv  sitemap.xml
docs/: colour.md  index.md
docs/python/: colour.md  dev.md  index.md  install.md  plot.md  todo.md  usage.ipynb
py/: pyproject.toml
py/vis/: __init__.py  colour.py  visualisation.py
python/: colour.html  dev.html  install.html  plot.html  todo.html  usage.html
search/: search_index.js  search_index.json
