[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vis"
version = "0.1.0"
authors = [
    { name = "USYD Rocketry Team", email = "rocketry.team@sydney.edu.au" },
    { name = "Steven Dang", email = "dang.steven13@gmail.com" },
]
description = "Unified visualisation library for USYD Rocketry Team"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["matplotlib>=3.8,<=3.10", "cycler"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = ["usyd rocketry team", "visualisation"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle error
    "F",   # Pyflakes
    "B",   # flake8-bugbear
    "I",   # isort
    "BLE", # flake8-blind-except
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "PTH", # flake8-use-pathlib
]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["E501", "F401"] # lines too long; imported but unused

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["vis"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
